# LRSM-with-Spheno

./: .gitignore  Lagrangian-LRSM-SSB-Deshpande1990.ipynb  MLRSM_UFO.tar  README.md  formfactors.tex  pv_type_check_output.txt  pv_wrappers_smoke.txt  run_2to3.sh
sympy_calculations/: Gauge-Higgs_senjanovic_HiggsDoublets_corrected.ipynb  Lagrangian.ipynb  Lagrangian_Barenboim1996.ipynb  Lagrangian_v1v2polar.ipynb  Yukawa_Roitgrund2016.ipynb  diagonalization_matrix2x2.py  potential_Barenboim1996.ipynb  potential_Barenboim1996_vL_zero.ipynb  potential_Barenboim1996_vev_real.ipynb  potential_Barenboim1996_vev_real_vL_zero.ipynb  potential_Roitgrund2016.ipynb  potential_senjanovic_HiggsDoublets.ipynb  pyproject.toml  symbolic_tools.py
sympy_calculations/Barenboim/: Lagrangian_Barenboim1996.ipynb  potential_Barenboim1996.ipynb
sympy_calculations/DLRSM/: FeynmanRules_senjanovic.ipynb  FeynmanRules_senjanovic_H10_Z1.ipynb  FeynmanRules_senjanovic_H10_Z1.py  FeynmanRules_senjanovic_H10_Z1_GM.py  FeynmanRules_senjanovic_SW.py  FeynmanRules_senjanovic_SW_GM.py  FeynmanRules_senjanovic_SW_GM_v2.py  Gauge-Higgs_senjanovic_HiggsDoublets_corrected.ipynb  Gauge_Higgs_senjanovic_HiggsDoublets.py  Yukawa_senjanovic_HiggsDoublets_corrected.ipynb  block_diagonalization_iss.ipynb  block_diagonalization_iss.py  block_diagonalization_iss_RobertoMartinez.ipynb  check_iss_diagonalization.ipynb  potential_senjanovic_HiggsDoublets.ipynb  potential_senjanovic_HiggsDoublets.py  potential_senjanovic_HiggsDoublets_SARAH_comparisons.ipynb  potential_senjanovic_HiggsDoublets_corrected.ipynb  (+4 more)
(+491 files in other folders)
